tests/transpiler/x/java/record_assign.error
exit status 1
Main.java:2: error: cannot find symbol
    static Counter c = new Counter(0);
           ^
  symbol:   class Counter
  location: class Main
Main.java:4: error: cannot find symbol
    static void inc(Counter c) {
                    ^
  symbol:   class Counter
  location: class Main
Main.java:2: error: cannot find symbol
    static Counter c = new Counter(0);
                           ^
  symbol:   class Counter
  location: class Main
3 errors
